--- a/src/Windows 11 Compatibility Checker.csproj
+++ b/src/Windows 11 Compatibility Checker.csproj
@@ -2,10 +2,14 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net40</TargetFramework>
+    <TargetFramework>net45</TargetFramework>
     <RootNamespace>Windows_11_Compatibility_Checker</RootNamespace>
     <UseWindowsForms>true</UseWindowsForms>
     <ApplicationIcon>Windows-11.ico</ApplicationIcon>
+    <ApplicationManifest>app.manifest</ApplicationManifest>
+    <Authors>Orange Group Tech</Authors>
+    <Copyright>Copyright © Orange Group Tech</Copyright>
+    <Version>1.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
