--- a/src/Windows 11 Compatibility Checker.csproj
+++ b/src/Windows 11 Compatibility Checker.csproj
@@ -9,7 +9,11 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
     <Authors>Orange Group Tech</Authors>
     <Copyright>Copyright © Orange Group Tech</Copyright>
-    <Version>1.4.1</Version>
+    <Version>1.4.2</Version>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <PlatformTarget>AnyCPU</PlatformTarget>
   </PropertyGroup>
 
   <ItemGroup>
