--- a/src/Windows 11 Compatibility Checker WPF.csproj
+++ b/src/Windows 11 Compatibility Checker WPF.csproj
@@ -7,7 +7,7 @@
     <UseWPF>true</UseWPF>
     <ApplicationIcon>Windows-11.ico</ApplicationIcon>
     <ApplicationManifest>app.manifest</ApplicationManifest>
-    <Version>2.3.2</Version>
+    <Version>2.4</Version>
     <Authors>Orange Group Tech</Authors>
     <Copyright>Copyright © Orange Group Tech</Copyright>
   </PropertyGroup>
@@ -22,6 +22,7 @@
 
   <ItemGroup>
     <Reference Include="System.Management" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Windows.Forms" />
   </ItemGroup>
 
