--- a/src/Windows 11 Compatibility Checker WPF.csproj
+++ b/src/Windows 11 Compatibility Checker WPF.csproj
@@ -2,12 +2,12 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net45</TargetFramework>
+    <TargetFramework>net452</TargetFramework>
     <RootNamespace>Windows_11_Compatibility_Checker_WPF</RootNamespace>
     <UseWPF>true</UseWPF>
     <ApplicationIcon>Windows-11.ico</ApplicationIcon>
     <ApplicationManifest>app.manifest</ApplicationManifest>
-    <Version>2.5</Version>
+    <Version>3.0</Version>
     <Authors>Orange Group Tech</Authors>
     <Copyright>Copyright © Orange Group Tech</Copyright>
     <SignAssembly>false</SignAssembly>
@@ -22,9 +22,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Resources\CPUs.txt" />
     <None Remove="Resources\WindowsCritical %28Custom%29.png" />
     <None Remove="Resources\WindowsSuccess %28Custom%29.png" />
     <None Remove="Resources\WindowsWarning %28Custom%29.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="iNKORE.UI.WPF.Modern" Version="0.9.25.1" />
   </ItemGroup>
 
   <ItemGroup>
@@ -34,6 +39,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Resource Include="Resources\CPUs.txt" />
     <Resource Include="Resources\WindowsCritical (Custom).png" />
     <Resource Include="Resources\WindowsSuccess (Custom).png" />
     <Resource Include="Resources\WindowsWarning (Custom).png" />
