--- a/src/Windows 11 Compatibility Checker.csproj
+++ b/src/Windows 11 Compatibility Checker.csproj
@@ -2,19 +2,14 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net45</TargetFramework>
-    <RootNamespace>Windows_11_Compatibility_Checker_WPF</RootNamespace>
-    <UseWPF>true</UseWPF>
+    <TargetFramework>net20</TargetFramework>
+    <RootNamespace>Windows_11_Compatibility_Checker</RootNamespace>
+    <UseWindowsForms>true</UseWindowsForms>
     <ApplicationIcon>Windows-11.ico</ApplicationIcon>
     <ApplicationManifest>app.manifest</ApplicationManifest>
-    <Version>2.5</Version>
     <Authors>Orange Group Tech</Authors>
     <Copyright>Copyright © Orange Group Tech</Copyright>
-    <SignAssembly>false</SignAssembly>
-  </PropertyGroup>
-
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <PlatformTarget>AnyCPU</PlatformTarget>
+    <Version>1.4.2</Version>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
@@ -22,21 +17,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="Resources\WindowsCritical %28Custom%29.png" />
-    <None Remove="Resources\WindowsSuccess %28Custom%29.png" />
-    <None Remove="Resources\WindowsWarning %28Custom%29.png" />
-  </ItemGroup>
-
-  <ItemGroup>
     <Reference Include="System.Management" />
-    <Reference Include="System.Web" />
     <Reference Include="System.Windows.Forms" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Resource Include="Resources\WindowsCritical (Custom).png" />
-    <Resource Include="Resources\WindowsSuccess (Custom).png" />
-    <Resource Include="Resources\WindowsWarning (Custom).png" />
   </ItemGroup>
 
   <ItemGroup>
@@ -51,7 +33,6 @@
     <EmbeddedResource Update="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </EmbeddedResource>
   </ItemGroup>
 
