--- a/src/Windows 11 Compatibility Checker WPF.csproj
+++ b/src/Windows 11 Compatibility Checker WPF.csproj
@@ -29,6 +29,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Costura.Fody" Version="5.7.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="iNKORE.UI.WPF.Modern" Version="0.9.25.1" />
   </ItemGroup>
 
